--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,14 @@
             android:label="@string/title_activity_phone_verification"
             android:screenOrientation="portrait" >
         </activity>
+        <activity
+            android:name=".CardUpdateActivity"
+            android:label="@string/title_activity_card_update"
+            android:parentActivityName=".MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="MainActivity" />
+        </activity>
     </application>
 
 </manifest>
