--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "19.1.0"
+    compileSdkVersion 20
+    buildToolsVersion '20.0.0'
 
     defaultConfig {
-        applicationId "com.socialimprover.saldotuc.app"
+        applicationId "com.socialimprover.saldotuc"
         minSdkVersion 8
-        targetSdkVersion 19
-        versionCode 1
-        versionName "1.0"
+        targetSdkVersion 20
+        versionCode 16
+        versionName '0.3.0'
     }
     buildTypes {
         release {
@@ -21,6 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:19.+'
+    compile 'com.android.support:appcompat-v7:20.+'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
 }
