--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Saldotuc" >
         <activity
             android:name="com.socialimprover.saldotuc.MainActivity"
-            android:label="@string/app_name"
+            android:label="@string/title_activity_main"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
