--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '20.0.0'
 
     defaultConfig {
-        applicationId "com.socialimprover.saldotuc"
+        applicationId 'com.socialimprover.saldotuc'
         minSdkVersion 8
         targetSdkVersion 20
         versionCode 17
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:20.+'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
+    compile 'com.mixpanel.android:mixpanel-android:4.2.1@aar'
 }
