--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion '20.0.0'
+    compileSdkVersion 21
+    buildToolsVersion '21.0.2'
 
     defaultConfig {
         applicationId 'com.socialimprover.saldotuc'
         minSdkVersion 8
-        targetSdkVersion 20
+        targetSdkVersion 21
         versionCode 27
         versionName '1.0.3'
     }
@@ -21,7 +21,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:20.+'
+    compile 'com.android.support:appcompat-v7:21.+'
+    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.shamanland:fab:0.0.5'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.mixpanel.android:mixpanel-android:4.2.1@aar'
 }
