--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 21
@@ -8,7 +9,7 @@ android {
         applicationId 'com.socialimprover.saldotuc'
         minSdkVersion 8
         targetSdkVersion 21
-        versionCode 29
+        versionCode 30
         versionName '1.1.0'
     }
     buildTypes {
@@ -25,4 +26,7 @@ dependencies {
     compile 'com.shamanland:fab:0.0.5'
     compile 'com.squareup.retrofit:retrofit:1.6.1'
     compile 'com.mixpanel.android:mixpanel-android:4.3.1@aar'
+    compile('com.crashlytics.sdk.android:crashlytics:2.0.1@aar') {
+        transitive = true;
+    }
 }
