--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,21 @@
                 android:value="com.socialimprover.saldotuc.ui.MainActivity" />
         </activity>
         <activity
+            android:name="com.socialimprover.saldotuc.ui.SearchActivity"
+            android:label="@string/title_activity_search"
+            android:parentActivityName="com.socialimprover.saldotuc.ui.AgenciesActivity"
+            android:screenOrientation="portrait" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.socialimprover.saldotuc.ui.AgenciesActivity" />
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
+        </activity>
+        <activity
             android:name="com.socialimprover.saldotuc.ui.AgencyActivity"
             android:label="@string/title_activity_agencies"
             android:parentActivityName="com.socialimprover.saldotuc.ui.AgenciesActivity"
