--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,7 +26,7 @@ android {
         applicationId "com.socialimprover.saldotuc"
         minSdkVersion 9
         targetSdkVersion 23
-        versionCode 46
+        versionCode 47
         versionName "2.0.0"
     }
     buildTypes {
@@ -65,10 +65,10 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile 'com.android.support:recyclerview-v7:23.1.0'
     compile 'com.android.support:support-v4:23.1.0'
-    compile 'com.google.android.gms:play-services-base:8.1.0'
-    compile 'com.google.android.gms:play-services-gcm:8.1.0'
+    compile 'com.google.android.gms:play-services-base:8.3.0'
+    compile 'com.google.android.gms:play-services-gcm:8.3.0'
     compile 'com.mixpanel.android:mixpanel-android:4.6.4'
-    compile 'com.diogobernardino:williamchart:2.0.1'
+    compile 'com.diogobernardino:williamchart:2.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.parse.bolts:bolts-android:1.2.1'
     compile 'com.parse:parse-android:1.10.3'
@@ -76,6 +76,9 @@ dependencies {
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'io.reactivex:rxandroid:1.0.1'
+    compile('com.crashlytics.sdk.android:answers:1.3.3@aar') {
+        transitive = true;
+    }
     compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
         transitive = true;
     }
