--- a/android/build.gradle
+++ b/android/build.gradle
@@ -26,8 +26,8 @@ android {
         applicationId "com.socialimprover.saldotuc"
         minSdkVersion 9
         targetSdkVersion 23
-        versionCode 49
-        versionName "2.0.2"
+        versionCode 50
+        versionName "2.1.0"
     }
     buildTypes {
         debug {
@@ -65,11 +65,14 @@ dependencies {
     compile 'com.android.support:design:23.1.0'
     compile 'com.android.support:recyclerview-v7:23.1.0'
     compile 'com.android.support:support-v4:23.1.0'
+    compile 'com.diogobernardino:williamchart:2.1'
     compile 'com.google.android.gms:play-services-base:8.3.0'
     compile 'com.google.android.gms:play-services-gcm:8.3.0'
-    compile 'com.mixpanel.android:mixpanel-android:4.6.4'
-    compile 'com.diogobernardino:williamchart:2.1'
+    compile 'com.google.android.gms:play-services-location:8.3.0'
+    compile 'com.google.android.gms:play-services-maps:8.3.0'
+    compile 'com.google.maps.android:android-maps-utils:0.4+'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'com.mixpanel.android:mixpanel-android:4.6.4'
     compile 'com.parse.bolts:bolts-android:1.2.1'
     compile 'com.parse:parse-android:1.10.3'
     compile 'com.squareup.retrofit:adapter-rxjava:2.0.0-beta2'
